# Luck-Arcade

./: .gitignore  LICENSE  README.md  TODO.md  app.py  cli_utils.py  coin_flip.py  demo.txt  dice_roll.py  docx_editor.py  main.py  number_guess.py  pyproject.toml  requirements.txt  rock_paper_scissors.py  stats.py
.github/workflows/: ci.yml
docs/: app.js  index.html  index.md  styles.css
luck_arcade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
static/: styles.css
templates/: index.html
tests/: test_cli_utils.py  test_docx_editor.py  test_games.py  test_stats.py
